argocd-manifests/core/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "argocd-learn-ca-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: argo-opt-5050-01.azhe.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - argo-opt-5050-01.azhe.my.id
      secretName: argocd-server-tls
